@@ -369,7 +369,7 @@ EXCLUDE_SYMLINKS       = NO
 # EXCLUDE_PATTERNS tag to specify one or more wildcard patterns to exclude 
 # certain files from those directories.
 
-EXCLUDE_PATTERNS       = */test/* */examples/* */src/snprintf.c
+EXCLUDE_PATTERNS       = */test/* */examples/* */src/snprintf.c */config.h
 
 # The EXAMPLE_PATH tag can be used to specify one or more files or 
 # directories that contain example code fragments that are included (see 
