@@ -388,3 +388,7 @@ Tue Apr  1 23:07:15 2003                        Michael Jennings (mej)
 
 More documentation work.  libast.h is almost finished.
 ----------------------------------------------------------------------
+Fri Apr  4 22:59:45 2003                        Michael Jennings (mej)
+
+Finally finished documenting libast.h.
+----------------------------------------------------------------------
